--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -1,19 +1,114 @@
-<!DOCTYPE html>
-<html>
+<!doctype html>
+<html lang="en">
     <head>
-        <meta charset="UTF-8">
-        <title>{% block title %}Welcome!{% endblock %}</title>
-        <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text></svg>">
-        {# Run `composer require symfony/webpack-encore-bundle` to start using Symfony UX #}
-        {% block stylesheets %}
-            {{ encore_entry_link_tags('app') }}
-        {% endblock %}
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta name="description" content="Notre Boutique e-commerce">
+        <meta name="author" content="Yassir Rigobert Khadija Yassine">
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css">
+        <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.11.3/css/dataTables.bootstrap5.min.css"> 
+        <script type="text/javascript" language="javascript" src="https://code.jquery.com/jquery-3.5.1.js"></script>
+        <script type="text/javascript" language="javascript" src="https://cdn.datatables.net/1.11.3/js/jquery.dataTables.min.js"></script>
+        <script type="text/javascript" language="javascript" src="https://cdn.datatables.net/1.11.3/js/dataTables.bootstrap5.min.js"></script>
+        <script src="{{ asset('js/dataTable.js') }}"></script>
+        <meta name="theme-color" content="#7952b3">
+        
+        <title>
+            {% block title %} 
 
-        {% block javascripts %}
-            {{ encore_entry_script_tags('app') }}
+            {% endblock %}
+        </title>
+        <style>
+        .bd-placeholder-img {
+            font-size: 1.125rem;
+            text-anchor: middle;
+            -webkit-user-select: none;
+            -moz-user-select: none;
+            user-select: none;
+        }
+
+        @media (min-width: 768px) {
+            .bd-placeholder-img-lg {
+            font-size: 3.5rem;
+            }
+        }
+        </style>
+
+        {% block stylesheets %}
+            
         {% endblock %}
+        <link href="https://fonts.googleapis.com/css?family=Playfair&#43;Display:700,900&amp;display=swap" rel="stylesheet">
+        <link href="{{ asset('css/shop.css') }}" rel="stylesheet">
     </head>
     <body>
-        {% block body %}{% endblock %}
+        <div class="container">
+            <header class="blog-header py-3">
+                <div class="row flex-nowrap justify-content-between align-items-center">
+                    {# <div class="col-4 pt-1">
+                        {% if app.user %}                    
+                             <a class="link-secondary" href="{{ path('app_profil') }}" title=" Acces a votre compte">Bonjour <strong>{{ app.user.prenom }} {{ app.user.nom}}</strong></a>
+                        {% else %}
+                            <a class="link-secondary" href="{{ path('app_register') }}">Créer un compte</a>                
+                        {% endif %}
+                    </div> #}
+                <div class="col-4 text-center">
+                    <a class="blog-header-logo text-center text-dark" href="">World of SHOUA</a>
+                </div>
+                    <div class="col-4 d-flex justify-content-end align-items-center">
+                        <a class="link-secondary" href="#" aria-label="Search">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="mx-3" role="img" viewBox="0 0 24 24"><title>Search</title><circle cx="10.5" cy="10.5" r="7.5"/><path d="M21 21l-5.2-5.2"/></svg>
+                        </a>
+
+                        {# {% if is_granted('ROLE_ADMIN') %}
+                             <a class="btn btn-sm btn-outline-info me-2" href="{{ path('app_admin') }}">BACKOFFICE</a>
+                        {% endif %}
+                        {% if app.user %}
+                            <a class="btn btn-sm btn-outline-danger" href="{{ path('app_logout') }}">Deconnexion</a>
+                        {% else %}
+                            <a class="btn btn-sm btn-outline-success" href="{{ path('app_login') }}">Identifiez-vous</a>
+                        {% endif %} #}
+
+                    </div>
+                </div>
+            </header>
+
+            {# <div class="nav-scroller py-1 mb-2">
+                <nav class="nav d-flex justify-content-between">
+                    {% if app.user %}               
+                        <a class="p-2 link-secondary" href="{{ path('blog_create') }}">Nouvel article</a>
+                    {% endif %}
+                    {{ render(controller('App\\Controller\\BlogController::allCategory')) }}
+                </nav>
+            </div> #}
+        </div>
+
+        <main class="container conteneur-front">
+
+     <div class="p-4 p-md-5 mb-4 text-white rounded bg-dark">
+        <div class="col-md-6 px-0 text-center">
+            <h1 class="display-4 fst-italic">WOOOOOOOORLD</h1>
+            <p class="lead my-3">Fraichement sortie en 2019 l'animé marque déja les esprits et ce classe dans le top sans aucun soucis !</p>
+                <p class="lead mb-0"><a href="" class="text-white fw-bold">En savoir plus</a></p>
+        </div>
+    </div>
+
+        {% block body %}
+            
+        {% endblock %}
+        </main>
+
+        <footer class="blog-footer">
+            <p>&copy;2021 - Tous droits réservé - Rigo - Shoua - Sine - Sir</a>.</p>
+            <p>
+                <a href="#">Back to top</a>
+            </p>
+        </footer>
+
+        {% block javascripts %}
+            
+        {% endblock %}
+        <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
     </body>
 </html>
