--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -1,114 +1,84 @@
 <!doctype html>
-<html lang="en">
-    <head>
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <meta name="description" content="Notre Boutique e-commerce">
-        <meta name="author" content="Yassir Rigobert Khadija Yassine">
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css">
-        <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.11.3/css/dataTables.bootstrap5.min.css"> 
-        <script type="text/javascript" language="javascript" src="https://code.jquery.com/jquery-3.5.1.js"></script>
-        <script type="text/javascript" language="javascript" src="https://cdn.datatables.net/1.11.3/js/jquery.dataTables.min.js"></script>
-        <script type="text/javascript" language="javascript" src="https://cdn.datatables.net/1.11.3/js/dataTables.bootstrap5.min.js"></script>
-        <script src="{{ asset('js/dataTable.js') }}"></script>
-        <meta name="theme-color" content="#7952b3">
-        
-        <title>
-            {% block title %} 
+<html lang="en" class="h-100">
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="">
+    <meta name="author" content="Mark Otto, Jacob Thornton, and Bootstrap contributors">
+    <meta name="generator" content="Hugo 0.88.1">
+    <title>Cover Template · Bootstrap v5.1</title>
 
-            {% endblock %}
-        </title>
-        <style>
-        .bd-placeholder-img {
-            font-size: 1.125rem;
-            text-anchor: middle;
-            -webkit-user-select: none;
-            -moz-user-select: none;
-            user-select: none;
+    <link rel="canonical" href="https://getbootstrap.com/docs/5.1/examples/cover/">
+
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css">
+
+    <!-- Bootstrap core CSS -->
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+
+    <!-- Favicons -->
+<link rel="apple-touch-icon" href="/docs/5.1/assets/img/favicons/apple-touch-icon.png" sizes="180x180">
+<link rel="icon" href="/docs/5.1/assets/img/favicons/favicon-32x32.png" sizes="32x32" type="image/png">
+<link rel="icon" href="/docs/5.1/assets/img/favicons/favicon-16x16.png" sizes="16x16" type="image/png">
+<link rel="manifest" href="/docs/5.1/assets/img/favicons/manifest.json">
+<link rel="mask-icon" href="/docs/5.1/assets/img/favicons/safari-pinned-tab.svg" color="#7952b3">
+<link rel="icon" href="/docs/5.1/assets/img/favicons/favicon.ico">
+<meta name="theme-color" content="#7952b3">
+
+
+    <style>
+      .bd-placeholder-img {
+        font-size: 1.125rem;
+        text-anchor: middle;
+        -webkit-user-select: none;
+        -moz-user-select: none;
+        user-select: none;
+      }
+
+      @media (min-width: 768px) {
+        .bd-placeholder-img-lg {
+          font-size: 3.5rem;
         }
+      }
+    </style>
 
-        @media (min-width: 768px) {
-            .bd-placeholder-img-lg {
-            font-size: 3.5rem;
-            }
-        }
-        </style>
-
-        {% block stylesheets %}
-            
-        {% endblock %}
-        <link href="https://fonts.googleapis.com/css?family=Playfair&#43;Display:700,900&amp;display=swap" rel="stylesheet">
-        <link href="{{ asset('css/shop.css') }}" rel="stylesheet">
-    </head>
-    <body>
-        <div class="container">
-            <header class="blog-header py-3">
-                <div class="row flex-nowrap justify-content-between align-items-center">
-                    {# <div class="col-4 pt-1">
-                        {% if app.user %}                    
-                             <a class="link-secondary" href="{{ path('app_profil') }}" title=" Acces a votre compte">Bonjour <strong>{{ app.user.prenom }} {{ app.user.nom}}</strong></a>
-                        {% else %}
-                            <a class="link-secondary" href="{{ path('app_register') }}">Créer un compte</a>                
-                        {% endif %}
-                    </div> #}
-                <div class="col-4 text-center">
-                    <a class="blog-header-logo text-center text-dark" href="">World of SHOUA</a>
-                </div>
-                    <div class="col-4 d-flex justify-content-end align-items-center">
-                        <a class="link-secondary" href="#" aria-label="Search">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="mx-3" role="img" viewBox="0 0 24 24"><title>Search</title><circle cx="10.5" cy="10.5" r="7.5"/><path d="M21 21l-5.2-5.2"/></svg>
-                        </a>
-
-                        {# {% if is_granted('ROLE_ADMIN') %}
-                             <a class="btn btn-sm btn-outline-info me-2" href="{{ path('app_admin') }}">BACKOFFICE</a>
-                        {% endif %}
-                        {% if app.user %}
-                            <a class="btn btn-sm btn-outline-danger" href="{{ path('app_logout') }}">Deconnexion</a>
-                        {% else %}
-                            <a class="btn btn-sm btn-outline-success" href="{{ path('app_login') }}">Identifiez-vous</a>
-                        {% endif %} #}
-
-                    </div>
-                </div>
-            </header>
-
-            {# <div class="nav-scroller py-1 mb-2">
-                <nav class="nav d-flex justify-content-between">
-                    {% if app.user %}               
-                        <a class="p-2 link-secondary" href="{{ path('blog_create') }}">Nouvel article</a>
-                    {% endif %}
-                    {{ render(controller('App\\Controller\\BlogController::allCategory')) }}
-                </nav>
-            </div> #}
+    
+    <!-- Custom styles for this template -->
+    <link href="shop.css" rel="stylesheet">
+  </head>
+  <body class="d-flex h-100 text-center text-white bg-dark">
+    
+    <div class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column">
+    <header class="mb-auto">
+        <div>
+        <h3 class="float-md-start mb-0">WORD OF SHOUA</h3>
+        <nav class="nav nav-masthead justify-content-center float-md-end">
+            <a class="nav-link active" aria-current="page" href="#">Accueil</a>
+            <a class="nav-link" href="#">Features</a>
+            <a class="nav-link" href="#">Contact</a>
+        </nav>
         </div>
+    </header>
 
-        <main class="container conteneur-front">
+        <h1>BIENVENUE SUR WORD OF SHOUA</h1>
 
-     <div class="p-4 p-md-5 mb-4 text-white rounded bg-dark">
-        <div class="col-md-6 px-0 text-center">
-            <h1 class="display-4 fst-italic">WOOOOOOOORLD</h1>
-            <p class="lead my-3">Fraichement sortie en 2019 l'animé marque déja les esprits et ce classe dans le top sans aucun soucis !</p>
-                <p class="lead mb-0"><a href="" class="text-white fw-bold">En savoir plus</a></p>
-        </div>
+    <main class="px-3">       
+        <p class="lead">Faites Votre Choix Vous n'allez pas le regretter</p>
+        <p class="lead">
+        <a href="#" class="btn btn-outline-light border-primary fw-bold text-primary col-1">Homme</a>
+        <a href="#" class="btn btn-outline-light border-danger fw-bold text-danger col-1">Femme</a>
+        </p>        
+    </main>
+
+    <footer class="mt-auto text-white-100">
+        <p>2021 - Tous Droit Réservé - Rigobert - Shoua - Yassine - Yassir </p>
+        <a class="nav-link" href="#">Contact</a>
+        <p>
+            <a href="#">Back to top</a>
+        </p>
+    </footer>
     </div>
 
-        {% block body %}
-            
-        {% endblock %}
-        </main>
 
-        <footer class="blog-footer">
-            <p>&copy;2021 - Tous droits réservé - Rigo - Shoua - Sine - Sir</a>.</p>
-            <p>
-                <a href="#">Back to top</a>
-            </p>
-        </footer>
-
-        {% block javascripts %}
-            
-        {% endblock %}
-        <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
-    </body>
+    
+  </body>
 </html>
