--- a/templates/back_office/index.html.twig
+++ b/templates/back_office/index.html.twig
@@ -1,20 +1,8 @@
-{% extends 'base.html.twig' %}
+{% extends 'base_admin.html.twig' %}
 
-{% block title %}Hello BackOfficeController!{% endblock %}
+{% block title %}Admin | Home{% endblock %}
 
 {% block body %}
-<style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
-</style>
+<h1 class="text-center mx-auto my-3">Bonjour Admin, Vous voilà dans le back office</h1>
 
-<div class="example-wrapper">
-    <h1>Hello {{ controller_name }}! ✅</h1>
-
-    This friendly message is coming from:
-    <ul>
-        <li>Your controller at <code><a href="{{ '/Applications/XAMPP/xamppfiles/htdocs/Projet-Groupe/src/Controller/BackOfficeController.php'|file_link(0) }}">src/Controller/BackOfficeController.php</a></code></li>
-        <li>Your template at <code><a href="{{ '/Applications/XAMPP/xamppfiles/htdocs/Projet-Groupe/templates/back_office/index.html.twig'|file_link(0) }}">templates/back_office/index.html.twig</a></code></li>
-    </ul>
-</div>
 {% endblock %}
