--- a/templates/base_admin.html.twig
+++ b/templates/base_admin.html.twig
@@ -75,13 +75,13 @@
       <div class="position-sticky pt-3">
         <ul class="nav flex-column">
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="#">
+            <a class="nav-link active" aria-current="page" href="{{ path('app_admin') }}">
             <i class="bi bi-house-door-fill"></i>
             &nbsp;Accueil
             </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">
+            <a class="nav-link" href="{{ path('app_admin_articles') }}">
             <i class="bi bi-file-earmark-fill"></i>
             &nbsp;Article
             </a>
@@ -104,7 +104,7 @@
         <hr>
         <ul class="nav flex-column mb-2">
           <li class="nav-item">
-            <a class="nav-link" href="#">
+            <a class="nav-link" href="{{ path('app_admin_articles_add') }}">
             <i class="bi bi-file-earmark-plus-fill"></i>
             &nbsp;Nouvel Article
             </a>
@@ -130,10 +130,11 @@
         </ul>
       </div>
     </nav>
-    {% block body %}
-    
-    {% endblock %}
-    
+    <div class="p-2" style="width: 80%; margin-left: 17.5%; overflow-y: auto;">        
+        {% block body %}
+            
+        {% endblock %}        
+        </div>
 
     {% block javascripts %}
     
