--- a/templates/back_office/admin_articles_form.html.twig
+++ b/templates/back_office/admin_articles_form.html.twig
@@ -23,16 +23,25 @@
 
         {{ form_row(formArticle.titre) }}
 
-        {{ form_row(formArticle.category) }}
+        <div class="d-flex col-12 justify-content-between my-2">
+            <div class="col-5">
+                {{ form_row(formArticle.category) }}
+            </div>
+            <div class="col-5">
+                {{ form_row(formArticle.couleur) }}
+            </div>
+        </div>
 
         {{ form_row(formArticle.description) }}
 
-        {{ form_row(formArticle.couleur) }}
-
-        {{ form_row(formArticle.prix) }}
-
-        {{ form_row(formArticle.stock) }}
-
+        <div class="d-flex col-12 justify-content-between my-2">
+            <div class="col-5">
+                {{ form_row(formArticle.prix) }}
+            </div>
+            <div class="col-5">
+                {{ form_row(formArticle.stock) }}
+            </div>
+        </div>
         {{ form_row(formArticle.photo) }}
 
         {% if photoActuelle %}
