--- a/templates/shop/index.html.twig
+++ b/templates/shop/index.html.twig
@@ -6,14 +6,14 @@
 
 {% block body %}
 
-     <h1 class="container">BIENVENUE SUR WORLD OF SHOUA</h1>
+        <h1 class="container text-center">BIENVENUE SUR WORLD OF SHOUA</h1>
 
-    <main class="px-3">
-          <p class="lead">Faites Votre Choix Vous n'allez pas le regretter</p>
-          <p class="lead">
-          <a href="#" class="btn btn-outline-light border-primary fw-bold text-primary col-1">Homme</a>
-          <a href="#" class="btn btn-outline-light border-danger fw-bold text-danger col-1">Femme</a>
-          </p>        
-    </main>
-
+        <main class="px-3 text-center">
+            <p class="lead">Faites Votre Choix Vous n'allez pas le regretter</p>
+            <p class="lead">
+            <a href="" class="btn btn-outline-light border-primary fw-bold text-primary col-1">Homme</a>
+            <a href="" class="btn btn-outline-light border-danger fw-bold text-danger col-1">Femme</a>
+            </p>        
+        </main>
+    
 {% endblock %}
