Ajout admin User

--- a/templates/back_office/admin_articles.html.twig
+++ b/templates/back_office/admin_articles.html.twig
@@ -13,7 +13,7 @@
             {{ message }}
         </div>        
     {% endfor %}
-    <table class="table table-striped mx-2" id="table-backoffice-user">
+    <table class="table table-striped mx-2" id="table-backoffice-article">
         <thead>
             <tr class="entete-articles">
                 {% for data in colonnes %}
