--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -9,30 +9,30 @@
 
         {{ form_start(registrationForm) }}
 
-            <div class="col-12 d-flex justify-content-between">
-                <div class="col-7">{{ form_row(registrationForm.email) }}</div>
-                <div class="col-4">{{ form_row(registrationForm.telephone) }}</div>
+            <div class="col-12 d-flex justify-content-between row">
+                <div class="col-md-6">{{ form_row(registrationForm.email) }}</div>
+                <div class="col-md-6">{{ form_row(registrationForm.telephone) }}</div>
             </div>
 
-            <div class="col-12 d-flex justify-content-between">
-                <div class="col-7">{{ form_row(registrationForm.pseudo) }}</div>
-                <div class="col-4">{{ form_row(registrationForm.sexe) }}</div>
+            <div class="col-12 d-flex justify-content-between row">
+                <div class="col-6">{{ form_row(registrationForm.pseudo) }}</div>
+                <div class="col-6">{{ form_row(registrationForm.sexe) }}</div>
             </div>
             
-            <div class="col-12 d-flex justify-content-between">
-                <div class="col-5">{{ form_row(registrationForm.prenom) }}</div>
-                <div class="col-5">{{ form_row(registrationForm.nom) }}</div>
+            <div class="col-12 d-flex justify-content-between row">
+                <div class="col-6">{{ form_row(registrationForm.prenom) }}</div>
+                <div class="col-6">{{ form_row(registrationForm.nom) }}</div>
             </div>
             
-            <div class="col-12 d-flex justify-content-between">
+            <div class="col-12 d-flex justify-content-between row">
                 <div class="col-4">{{ form_row(registrationForm.adresse) }}</div>
                 <div class="col-4">{{ form_row(registrationForm.ville) }}</div>
-                <div class="col-2">{{ form_row(registrationForm.codePostal) }}</div>
+                <div class="col-4">{{ form_row(registrationForm.codePostal) }}</div>
             </div>
 
-            <div class="col-12 d-flex justify-content-between">
-                <div class="col-5">{{ form_row(registrationForm.password.first) }}</div>
-                <div class="col-5">{{ form_row(registrationForm.password.second) }}</div>
+            <div class="col-12 d-flex justify-content-between row">
+                <div class="col-6">{{ form_row(registrationForm.password.first) }}</div>
+                <div class="col-6">{{ form_row(registrationForm.password.second) }}</div>
             </div>
             <div class='text-center my-5'>
                     <button type="submit" class="btn btn-success text-white mb-3 col-3">S'inscrire</button>
