--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -15,7 +15,7 @@
     {% endif %}
 
     <h1 class="mb-3 text-center my-5">Connectez-vous</h1>
-        <div class="col-7 mx-auto mb-5">
+        <div class="col-5 mx-auto mb-5">
 
             <label for="inputEmail">Email</label>
             <input type="email" value="{{ last_username }}" name="email" id="inputEmail" class="form-control" autocomplete="email" required autofocus>
@@ -24,7 +24,7 @@
 
             <input type="hidden" name="_csrf_token" value="{{ csrf_token('authenticate') }}">
             <div class="text-center mt-4">
-                <button class="btn btn-secondary col-3" type="submit">Se connecter</button>
+                <button class="btn btn-secondary col-3" type="submit" href="{{ path('app_profil') }}">Se connecter</button>
             </div>
             <p class="text-center my-5">Vous n'avez pas encore de compte ? <a href="{{ path('app_register') }}">Créer votre compte</a> .</p>
         </div>
