--- a/templates/base_admin.html.twig
+++ b/templates/base_admin.html.twig
@@ -61,7 +61,6 @@
   <button class="navbar-toggler position-absolute d-md-none collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#sidebarMenu" aria-controls="sidebarMenu" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
-  <input class="form-control form-control-dark w-100" type="text" placeholder="Search" aria-label="Search">
   <div class="navbar-nav">
     <div class="nav-item text-nowrap">
       <a class="nav-link px-3 text-danger" href="{{ path('app_logout') }}">Deconnexion</a>
@@ -87,13 +86,13 @@
             </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">
+            <a class="nav-link" href="{{ path('app_admin_commande') }}">
             <i class="bi bi-cart-fill"></i>
             &nbsp;Commande
             </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">
+            <a class="nav-link" href="{{ path('app_admin_user') }}">
             <i class="bi bi-suit-heart-fill"></i>
             &nbsp;Utilisateur
             </a>
@@ -116,13 +115,13 @@
             </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">
+            <a class="nav-link" href="{{ path('index') }}">
             <i class="bi bi-door-open-fill"></i>
             &nbsp;Quitter
             </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">
+            <a class="nav-link" href="{{ path('app_logout') }}">
             <i class="bi bi-flag-fill"></i>
             &nbsp;Déconnexion
             </a>
