--- a/templates/registration/profil.html.twig
+++ b/templates/registration/profil.html.twig
@@ -72,7 +72,7 @@
                 Adresse
             </button>
             </h2>
-            <div id="collapseFour" class="accordion-collapse collapse" aria-labelledby="headingFive" data-bs-parent="#accordionExample">
+            <div id="collapseFive" class="accordion-collapse collapse" aria-labelledby="headingFive" data-bs-parent="#accordionExample">
                 <div class="accordion-body d-flex justify-content-between">
                     <span>{{ user.adresse }}</span>
                     <span><a href="{{ path('app_profil_edit', {'id': user.id}) }}" class="link-secondary">Modifier</a></span>
