--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -66,7 +66,7 @@
                   <a class="nav-link active" aria-current="page" href="{{ path('index') }}">Accueil</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link active" href="{{ path('shop') }}">Boutique</a>
+                  <a class="nav-link active" href="">Boutique</a>
                 </li>
                 <li class="nav-item dropdown">
                   <a class="nav-link active dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
