--- a/templates/back_office/admin_user.html.twig
+++ b/templates/back_office/admin_user.html.twig
@@ -57,7 +57,7 @@
                                 <td class="text-primary"> {{ data.nom }}</td>
                                 <td class="text-primary"> {{ data.prenom }}</td>
                                 <td class="text-primary"> {{ data.sexe }}</td>
-                                <td class="text-primary"> {{ data.telephone }}</td>
+                                <td class="text-primary"> {{ data.telephone|abs }}</td>
                                 <td class="text-primary"> {{ data.adresse }}</td>
                                 <td class="text-primary"> {{ data.ville }}</td>
                                 <td class="text-primary"> {{ data.codePostal }}</td>                        
