--- a/templates/back_office/admin_commande.html.twig
+++ b/templates/back_office/admin_commande.html.twig
@@ -33,7 +33,7 @@
                     <td class="text-center">{{ data.user.nom }} / {{ data.user.prenom }} / {{ data.user.email }} </td>
                     <td class="text-center">{{ data.detailCommande.article.titre }} </td>
                     <td>
-                        <div class="d-flex nowrap">
+                        <div class="text-center">
                             <a href="{{ path('app_admin_commande_delete', {'id': data.id}) }}" class="btn btn-danger text-white me-1" onclick="return(confirm('Etes-vous sur de vouloir supprimer cette commande' ))"><i class="bi bi-trash"></i></a>
                             <a href="{{ path('app_admin_commande_update', {'id': data.id}) }}" class="btn btn-success text-white"><i class="bi bi-pencil-square"></i></a>
                         </div>
